<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".view.MainActivity">

	<TextView
		android:id="@+id/tv_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textAlignment="center"
		android:textColor="@color/primaryDarkColor"
		android:layout_marginBottom="40dp"
		android:textSize="30sp"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_new"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:text="@string/btn_new_puzzle"
		android:textAllCaps="false"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_random"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:text="@string/btn_random_puzzle"
		android:textAllCaps="false"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_load"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:text="@string/btn_load_puzzle"
		android:textAllCaps="false"/>

</LinearLayout>